# AutoParts

./: CMakeLists.txt  README.md  build.sh  conifer.out.asrv.part  conifer.out.basefreq.part  conifer.out.ln  conifer.out.subrates.part  conifer.out.tree.part  conifer.out.treelength.part  index.html  params.json
src/: Alignment.cpp  Alignment.h  CMakeLists.txt  Chunk.cpp  Chunk.h  DualStream.h  MbEigensystem.cpp  MbMath.cpp  MbRandom.cpp  MbRandom.h  MbTransitionMatrix.cpp  Mcmc.cpp  Mcmc.h  Mcmc_summary.cpp  Model.cpp  Model.h  Parm.cpp  Parm.h  ParmAsrv.cpp  ParmAsrv.h  ParmFreqs.cpp  ParmFreqs.h  ParmLength.cpp  ParmLength.h  ParmSubrates.cpp  ParmSubrates.h  ParmTree.cpp  ParmTree.h  Restaurant.cpp  Restaurant.h  Restaurant_summary.cpp  Settings.cpp  Settings.h  StateSets.cpp  Table.h  main.cpp
src/AutoParts.xcodeproj/: brianmoore.pbxuser
src/AutoParts.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/AutoParts.xcodeproj/project.xcworkspace/xcshareddata/: AutoParts.xccheckout
src/AutoParts.xcodeproj/project.xcworkspace/xcuserdata/brianmoore.xcuserdatad/: UserInterfaceState.xcuserstate
src/AutoParts.xcodeproj/project.xcworkspace/xcuserdata/johnh.xcuserdatad/: UserInterfaceState.xcuserstate
src/AutoParts/AutoParts.xcodeproj/: project.pbxproj
src/AutoParts/DerivedData/AutoParts/: Blueprint.xcscmblueprint  info.plist
src/AutoParts/DerivedData/ModuleCache/: Session.modulevalidation
src/DerivedData/AutoParts/: info.plist
src/DerivedData/AutoParts/TextIndex/: text-filter.idx  text-index.idx
(+199 files in other folders)
